tests/NormalTests/paczka1/small_fuzzy/94279832.err
Error in line 4: AhTSvpQ3 S763 54,5
Error in line 11: 8GjJyxPQMF A910 96,1
